unit_tests/regression.suite/cast-checks-4.err
(vector)-ZERO_VECTOR;
         ^
(Line 3 char 10): ERROR: Syntax error
