unit_tests/regression.suite/cast-checks-4.lsl
default{timer(){

(vector)-ZERO_VECTOR;

}}
